src/cpp/structs.h

FFI_TYPE_EXPORT typedef struct {
    uint8_t* ptr;
    int32_t length;
} CBinaryArray;
FFI_TYPE_EXPORT typedef struct {
    int32_t code;
    char* message;
} CKTapProtoException;
FFI_TYPE_EXPORT typedef struct {
    CKTapCardHandle handle;
    CKTapInterfaceErrorCode errorCode;
} CKTapOperationResponse;
/// Used when accessing tap_protocol methods that can throw
FFI_TYPE_EXPORT typedef struct {
    CKTapInterfaceErrorCode errorCode;
    CKTapProtoException exception;
} CKTapInterfaceStatus;
FFI_TYPE_EXPORT typedef struct {
    int32_t satscardHandle;
    int32_t index;
    int32_t status;
    char* address;

    /// Requires the CVC to acquire
    CBinaryArray privkey;
    CBinaryArray pubkey;
    CBinaryArray masterPK;
    CBinaryArray chainCode;
} SlotConstructorParams;
FFI_TYPE_EXPORT typedef struct {
    CKTapInterfaceStatus status;
    char* wif;
} SlotToWifResponse;
FFI_TYPE_EXPORT typedef struct {
    CKTapInterfaceStatus status;
    CKTapCardConstructorParams base;
    int32_t activeSlotIndex;
    int32_t numSlots;
    int8_t hasUnusedSlots;
    int8_t isUsedUp;
} SatscardConstructorParams;
FFI_TYPE_EXPORT typedef struct {
    CKTapInterfaceStatus status;
    SlotConstructorParams params;
} SatscardGetSlotResponse;
FFI_TYPE_EXPORT typedef struct {
    CKTapInterfaceStatus status;
    CKTapCardConstructorParams base;
    int32_t numberOfBackups;
    char* derivationPath;
} TapsignerConstructorParams;