lib/src/native/bindings.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names
// ignore_for_file: constant_identifier_names
// ignore_for_file: experiment_not_enabled

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for the source code in ./src/cpp
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class NativeBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Ensures that the transport response buffer will be appropriately sized
  /// Returns a pointer to the buffer if valid, nullptr if not
  ffi.Pointer<ffi.Uint8> Core_allocateTransportResponseBuffer(
    int sizeInBytes,
  ) {
    return _Core_allocateTransportResponseBuffer(
      sizeInBytes,
    );
  }

  late final _Core_allocateTransportResponseBufferPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function(ffi.Int32)>>(
          'Core_allocateTransportResponseBuffer');
  late final _Core_allocateTransportResponseBuffer =
      _Core_allocateTransportResponseBufferPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function(int)>();

  /// Attempts to perform an initial handshake with a CKTapCard
  int Core_beginAsyncHandshake(
    int cardType,
  ) {
    return _Core_beginAsyncHandshake(
      cardType,
    );
  }

  late final _Core_beginAsyncHandshakePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
          'Core_beginAsyncHandshake');
  late final _Core_beginAsyncHandshake =
      _Core_beginAsyncHandshakePtr.asFunction<int Function(int)>();

  /// Must be called last to store and retrieve Satscard/Tapsigner data
  CKTapOperationResponse Core_endOperation() {
    return _Core_endOperation();
  }

  late final _Core_endOperationPtr =
      _lookup<ffi.NativeFunction<CKTapOperationResponse Function()>>(
          'Core_endOperation');
  late final _Core_endOperation =
      _Core_endOperationPtr.asFunction<CKTapOperationResponse Function()>();

  /// Must be called at the end of every async action
  int Core_finalizeAsyncAction() {
    return _Core_finalizeAsyncAction();
  }

  late final _Core_finalizeAsyncActionPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'Core_finalizeAsyncAction');
  late final _Core_finalizeAsyncAction =
      _Core_finalizeAsyncActionPtr.asFunction<int Function()>();

  /// Informs the native thread that it's now safe to read the previously allocated buffer
  int Core_finalizeTransportResponse() {
    return _Core_finalizeTransportResponse();
  }

  late final _Core_finalizeTransportResponsePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'Core_finalizeTransportResponse');
  late final _Core_finalizeTransportResponse =
      _Core_finalizeTransportResponsePtr.asFunction<int Function()>();

  /// Gets the most recent tap_protocol::TapProtoException ONLY if the current thread state is
  /// CKTapThreadState::tapProtocolError
  CKTapProtoException Core_getTapProtoException() {
    return _Core_getTapProtoException();
  }

  late final _Core_getTapProtoExceptionPtr =
      _lookup<ffi.NativeFunction<CKTapProtoException Function()>>(
          'Core_getTapProtoException');
  late final _Core_getTapProtoException = _Core_getTapProtoExceptionPtr
      .asFunction<CKTapProtoException Function()>();

  /// Gets the current native thread state atomically
  int Core_getThreadState() {
    return _Core_getThreadState();
  }

  late final _Core_getThreadStatePtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('Core_getThreadState');
  late final _Core_getThreadState =
      _Core_getThreadStatePtr.asFunction<int Function()>();

  /// Retrieves the size of the current transport request in bytes
  /// Returns 0 if the native thread isn't ready or is invalid
  int Core_getTransportRequestLength() {
    return _Core_getTransportRequestLength();
  }

  late final _Core_getTransportRequestLengthPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'Core_getTransportRequestLength');
  late final _Core_getTransportRequestLength =
      _Core_getTransportRequestLengthPtr.asFunction<int Function()>();

  /// Retrieves a pointer to the current transport request
  /// Returns nullptr if the native thread isn't ready or is invalid
  ffi.Pointer<ffi.Uint8> Core_getTransportRequestPointer() {
    return _Core_getTransportRequestPointer();
  }

  late final _Core_getTransportRequestPointerPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Uint8> Function()>>(
          'Core_getTransportRequestPointer');
  late final _Core_getTransportRequestPointer =
      _Core_getTransportRequestPointerPtr.asFunction<
          ffi.Pointer<ffi.Uint8> Function()>();

  /// Ensures the library and native thread are initialized
  int Core_initializeLibrary() {
    return _Core_initializeLibrary();
  }

  late final _Core_initializeLibraryPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'Core_initializeLibrary');
  late final _Core_initializeLibrary =
      _Core_initializeLibraryPtr.asFunction<int Function()>();

  /// Must be called first to restore the native thread to its initial state
  int Core_newOperation() {
    return _Core_newOperation();
  }

  late final _Core_newOperationPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>('Core_newOperation');
  late final _Core_newOperation =
      _Core_newOperationPtr.asFunction<int Function()>();

  /// Signals cancellation of the current operation, causing the thread to enter a
  /// resettable state
  int Core_requestCancelOperation() {
    return _Core_requestCancelOperation();
  }

  late final _Core_requestCancelOperationPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function()>>(
          'Core_requestCancelOperation');
  late final _Core_requestCancelOperation =
      _Core_requestCancelOperationPtr.asFunction<int Function()>();

  /// Gets a C representation of parameters required to construct a [Satscard] in dart. Note: must use
  /// [Utility_freeSatscardConstructorParams] when you are finished using the data to deallocate memory
  SatscardConstructorParams Satscard_createConstructorParams(
    int handle,
  ) {
    return _Satscard_createConstructorParams(
      handle,
    );
  }

  late final _Satscard_createConstructorParamsPtr = _lookup<
          ffi.NativeFunction<SatscardConstructorParams Function(ffi.Int32)>>(
      'Satscard_createConstructorParams');
  late final _Satscard_createConstructorParams =
      _Satscard_createConstructorParamsPtr.asFunction<
          SatscardConstructorParams Function(int)>();

  SatscardGetSlotResponse Satscard_getActiveSlot(
    int handle,
  ) {
    return _Satscard_getActiveSlot(
      handle,
    );
  }

  late final _Satscard_getActiveSlotPtr =
      _lookup<ffi.NativeFunction<SatscardGetSlotResponse Function(ffi.Int32)>>(
          'Satscard_getActiveSlot');
  late final _Satscard_getActiveSlot = _Satscard_getActiveSlotPtr.asFunction<
      SatscardGetSlotResponse Function(int)>();

  SlotToWifResponse Satscard_slotToWif(
    int handle,
    int index,
  ) {
    return _Satscard_slotToWif(
      handle,
      index,
    );
  }

  late final _Satscard_slotToWifPtr = _lookup<
          ffi.NativeFunction<SlotToWifResponse Function(ffi.Int32, ffi.Int32)>>(
      'Satscard_slotToWif');
  late final _Satscard_slotToWif =
      _Satscard_slotToWifPtr.asFunction<SlotToWifResponse Function(int, int)>();

  /// Gets a C representation of parameters required to construct a [Tapsigner] in dart. Note: must use
  /// [Utility_freeTapsignerConstructorParams] when you are finished using the data to deallocate memory
  TapsignerConstructorParams Tapsigner_createConstructorParams(
    int handle,
  ) {
    return _Tapsigner_createConstructorParams(
      handle,
    );
  }

  late final _Tapsigner_createConstructorParamsPtr = _lookup<
          ffi.NativeFunction<TapsignerConstructorParams Function(ffi.Int32)>>(
      'Tapsigner_createConstructorParams');
  late final _Tapsigner_createConstructorParams =
      _Tapsigner_createConstructorParamsPtr.asFunction<
          TapsignerConstructorParams Function(int)>();

  /// ----------------------------------------------
  /// Utility:
  void Utility_freeCBinaryArray(
    CBinaryArray array,
  ) {
    return _Utility_freeCBinaryArray(
      array,
    );
  }

  late final _Utility_freeCBinaryArrayPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CBinaryArray)>>(
          'Utility_freeCBinaryArray');
  late final _Utility_freeCBinaryArray =
      _Utility_freeCBinaryArrayPtr.asFunction<void Function(CBinaryArray)>();

  void Utility_freeCKTapInterfaceStatus(
    CKTapInterfaceStatus status,
  ) {
    return _Utility_freeCKTapInterfaceStatus(
      status,
    );
  }

  late final _Utility_freeCKTapInterfaceStatusPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CKTapInterfaceStatus)>>(
          'Utility_freeCKTapInterfaceStatus');
  late final _Utility_freeCKTapInterfaceStatus =
      _Utility_freeCKTapInterfaceStatusPtr.asFunction<
          void Function(CKTapInterfaceStatus)>();

  void Utility_freeCKTapProtoException(
    CKTapProtoException exception,
  ) {
    return _Utility_freeCKTapProtoException(
      exception,
    );
  }

  late final _Utility_freeCKTapProtoExceptionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(CKTapProtoException)>>(
          'Utility_freeCKTapProtoException');
  late final _Utility_freeCKTapProtoException =
      _Utility_freeCKTapProtoExceptionPtr.asFunction<
          void Function(CKTapProtoException)>();

  void Utility_freeCString(
    ffi.Pointer<ffi.Char> cString,
  ) {
    return _Utility_freeCString(
      cString,
    );
  }

  late final _Utility_freeCStringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'Utility_freeCString');
  late final _Utility_freeCString = _Utility_freeCStringPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>)>();

  void Utility_freeSatscardConstructorParams(
    SatscardConstructorParams params,
  ) {
    return _Utility_freeSatscardConstructorParams(
      params,
    );
  }

  late final _Utility_freeSatscardConstructorParamsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SatscardConstructorParams)>>(
          'Utility_freeSatscardConstructorParams');
  late final _Utility_freeSatscardConstructorParams =
      _Utility_freeSatscardConstructorParamsPtr.asFunction<
          void Function(SatscardConstructorParams)>();

  void Utility_freeSatscardGetSlotResponse(
    SatscardGetSlotResponse response,
  ) {
    return _Utility_freeSatscardGetSlotResponse(
      response,
    );
  }

  late final _Utility_freeSatscardGetSlotResponsePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(SatscardGetSlotResponse)>>(
          'Utility_freeSatscardGetSlotResponse');
  late final _Utility_freeSatscardGetSlotResponse =
      _Utility_freeSatscardGetSlotResponsePtr.asFunction<
          void Function(SatscardGetSlotResponse)>();

  void Utility_freeSlotConstructorParams(
    SlotConstructorParams params,
  ) {
    return _Utility_freeSlotConstructorParams(
      params,
    );
  }
